Bug 1215596 - outline: auto; will render as outline: solid; when disabled. r=roc